Upgrade to support JDK 8, 9, 11, 12